Updated by task 'AutomatedMDTask_1653503768204_TM-MT_1653503807103'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/d397fe8a435cf411147e773ee11c34c29ecf7f5b

--- a/c-legacy-releases/2020/10292020.md
+++ b/c-legacy-releases/2020/10292020.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: November 2020
 author: mfrei
 exl-id: 42ee5557-08b1-45f0-8388-22f208aae5c0
-source-git-commit: 85babc4aee75bd4372a65c8daf8ca70e902c3b86
+source-git-commit: d397fe8a435cf411147e773ee11c34c29ecf7f5b
 workflow-type: tm+mt
-source-wordcount: '9289'
+source-wordcount: '9288'
 ht-degree: 91%
 
 ---
@@ -39,7 +39,7 @@ ht-degree: 91%
 * [[!DNL Primetime]](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html?lang=zh-Hant)
 * [Document Cloud](#doc-cloud)
 
-需要協助嗎？請造訪 [Adobe Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，尋找產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
+需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，尋找產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
 
 >[!NOTE]
 >
@@ -99,7 +99,7 @@ ht-degree: 91%
 
 ### Journey Orchestration 的其他資源
 
-[文件](https://experienceleague.adobe.com/docs/journeys/using/journey-orchestration-home.html?lang=zh-Hant) - [版本注意事項](https://experienceleague.adobe.com/docs/journeys/using/release-notes/release-notes.html?lang=zh-Hant) - [做法影片](https://experienceleague.adobe.com/docs/platform-learn/tutorials/journey-orchestration/introduction.html)
+[文件](https://experienceleague.adobe.com/docs/journeys/using/journey-orchestration-home.html?lang=zh-Hant) - [版本注意事項](https://experienceleague.adobe.com/docs/journeys/using/release-notes/release-notes.html?lang=zh-Hant) - [做法影片](https://experienceleague.adobe.com/docs/platform-learn/tutorials/journey-orchestration/introduction.html?lang=zh-Hant)
 
 ## ![圖示](/assets/analytics.png) [!DNL Adobe Analytics] {#analytics}
 
