--- a/c-legacy-releases/2021/03252021.md
+++ b/c-legacy-releases/2021/03252021.md
@@ -5,9 +5,9 @@ doc-type: release notes
 last-update: March 2021
 author: mfrei
 exl-id: be492608-3c6a-4531-8748-23ab2922a18b
-source-git-commit: 9f1880df7ecef775a804a59bafd5bc7fc17f5401
+source-git-commit: d397fe8a435cf411147e773ee11c34c29ecf7f5b
 workflow-type: tm+mt
-source-wordcount: '7848'
+source-wordcount: '7847'
 ht-degree: 99%
 
 ---
@@ -41,7 +41,7 @@ Experience Cloud 解決方案和服務每月都會更新。 此頁面是尋找 [
 * [Document Cloud](#doc-cloud)
 * [Creative Cloud Enterprise](#creative-cloud)
 
-需要協助嗎？請造訪 [Adobe Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，尋找產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
+需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，尋找產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
 
 ## ![圖示](/assets/adobe.png)數位體驗藍圖 {#blueprints}
 
@@ -96,7 +96,7 @@ Adobe 系統狀態的最新更新位在 [Adobe 系統狀態 - 2020 年 5 月 21 
 | 2021 年 3 月 5 日 | [從 Salesforce CRM 擷取資料](https://experienceleague.adobe.com/docs/platform-learn/tutorials/sources/ingest-data-from-crm.html?lang=zh-Hant) | 影片 | 此影片說明如何以順暢且可擴充的方式輕鬆地將 CRM 來源中的資料批次擷取到 Adobe Experience Platform 的 Real-time Customer Profile 和 Data Lake。 |
 | 2021 年 3 月 5 日 | [從 Adobe Analytics 擷取資料](https://experienceleague.adobe.com/docs/platform-learn/tutorials/sources/ingest-data-from-adobe-analytics.html?lang=zh-Hant) | 影片 | Adobe Analytics 來源連接器可讓您以順暢且可擴充的方式輕鬆地將 Adobe Analytics 中的資料串流到 Adobe Experience Platform 的 Real-time Customer Profile 和 Experience Data Lake。 |
 | 2021 年 3 月 5 日 | [了解來源連接器](https://experienceleague.adobe.com/docs/platform-learn/tutorials/sources/overview.html?lang=zh-Hant#sources) | 影片 | 此影片提供 Experience Platform 中的來源或來源連接器的概觀資訊。 |
-| 2021 年 3 月 5 日 | [Adobe開發人員控制台導出Postman詳細資訊](https://experienceleague.adobe.com/docs/platform-learn/tutorials/platform-api-authentication.html?lang=zh-Hant) | 影片 | 了解如何驗證及存取 Experience Platform API。 |
+| 2021 年 3 月 5 日 | [Adobe Developer控制台導出Postman詳細資訊](https://experienceleague.adobe.com/docs/platform-learn/tutorials/platform-api-authentication.html?lang=zh-Hant) | 影片 | 了解如何驗證及存取 Experience Platform API。 |
 | 2021 年 3 月 5 日 | [了解資料擷取](https://experienceleague.adobe.com/docs/platform-learn/tutorials/data-ingestion/understanding-data-ingestion.html#data-ingestion) | 影片 | 了解 Experience Platform 的資料擷取功能，該功能可讓您將資料一起整合到一個開放且可擴充的平台中，以方便管理即時客戶資料。 |
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) Journey Orchestration {#journey-orch}
@@ -186,7 +186,7 @@ AN-206099；AN-237460；AN-241803；AN-243735；AN-244081；AN-244615；AN-24468
 | [!UICONTROL Same-as-SiteCatalyst VISTA Processing] = ON | 2021 年 3 月 17 日 | 在 2021 年 6 月 17 日，所有報表套裝都將更新：將 [!UICONTROL Same-as-SiteCatalyst VISTA Processing] 設定為 ON。此變更會透過處理資料以符合處理規則來影響 [!UICONTROL Data Warehouse] 報告。如有疑問或需要釐清一些事情，請聯繫 Adobe 客戶服務。 |
 | Reports &amp; Analytics 登陸頁面選項 | 2021 年 2 月 19 日 | 2021 年 3 月 25 日，將新 Reports &amp; Analytics 儀表板或其他內容設定為 Adobe Analytics 登陸頁面的選項將被刪除。如果您先前將 Reports &amp; Analytics 頁面設為自訂登陸頁面，則該頁面將持續有效，直到您在「[!UICONTROL 用戶偏好設定]」中修改登陸頁面為止。 |
 | Ad Hoc Analysis 生命週期結束 | 2021 年 1 月 | [!UICONTROL Ad Hoc Analysis] 的生命週期在 2021 年 3 月 1 日結束。如需詳細資訊，請瀏覽 [Discover Workspace](https://spark.adobe.com/page/S9Bhp66VJ2fEn/)。 |
-| 三個 Analytics API 服務結束生命週期 | 2021 年 1 月 6 日 | 下列 Analytics Legacy API 服務預計在 2021 年 4 月 30 日結束生命週期並關閉。所有目前使用這些服務建立的整合功能將於當天停止運作。<ul><li>1.3 Analytics API</li><li>1.4 SOAP Analytics API</li><li>Legacy OAuth 驗證 (OAuth 和 JWT)</li></ul>我們提供 [Legacy API EOL 常見問題集](https://github.com/AdobeDocs/analytics-1.4-apis/blob/master/docs/APIEOL.md?mv=email)來協助回答您的問題，並指引您展開後續操作。採用這些服務的 API 整合應用可移轉為 [1.4 Analytics REST API](https://github.com/AdobeDocs/analytics-1.4-apis?mv=email) 或 [2.0 Analytics API](https://github.com/AdobeDocs/analytics-2.0-apis?mv=email)。舊式OAuth帳戶可以遷移到 [Adobe開發人員](https://console.adobe.io/home?mv=email#) 分析整合帳戶，可用於訪問1.4 Analytics API和2.0 Analytics API。 |
+| 三個 Analytics API 服務結束生命週期 | 2021 年 1 月 6 日 | 下列 Analytics Legacy API 服務預計在 2021 年 4 月 30 日結束生命週期並關閉。所有目前使用這些服務建立的整合功能將於當天停止運作。<ul><li>1.3 Analytics API</li><li>1.4 SOAP Analytics API</li><li>Legacy OAuth 驗證 (OAuth 和 JWT)</li></ul>我們提供 [Legacy API EOL 常見問題集](https://github.com/AdobeDocs/analytics-1.4-apis/blob/master/docs/APIEOL.md?mv=email)來協助回答您的問題，並指引您展開後續操作。採用這些服務的 API 整合應用可移轉為 [1.4 Analytics REST API](https://github.com/AdobeDocs/analytics-1.4-apis?mv=email) 或 [2.0 Analytics API](https://github.com/AdobeDocs/analytics-2.0-apis?mv=email)。舊式OAuth帳戶可以遷移到 [Adobe Developer](https://console.adobe.io/home?mv=email#) 分析整合帳戶，可用於訪問1.4 Analytics API和2.0 Analytics API。 |
 | Adobe Data Connectors 終止服務 | 2020 年 7 月 13 日 | Adobe [!UICONTROL Data Connectors] 的舊技術已無法使用或不再支援。[Adobe Exchange 合作夥伴計劃](https://partners.adobe.com/exchangeprogram/experiencecloud)中有提供新的標準。您可以針對任何整合使用該項標準，以繼續獲得產品供應和支援。生命週期結束的官方日期為 2021 年 8 月 1 日。[了解更多...](https://experienceleague.adobe.com/docs/analytics/import/dataconnectors/data-connectors-eol.html?lang=zh-Hant) |
 
 ### AppMeasurement {#appm}
