--- a/c-legacy-releases/2021/07222021.md
+++ b/c-legacy-releases/2021/07222021.md
@@ -6,9 +6,9 @@ last-update: July 2021
 author: mfrei
 mini-toc-levels: 1
 exl-id: 02a30ea2-3f2f-4b7d-85c0-84116a9833ee
-source-git-commit: 0550d7a4ccf69654f6f205752a109fbb9a83e172
+source-git-commit: d397fe8a435cf411147e773ee11c34c29ecf7f5b
 workflow-type: tm+mt
-source-wordcount: '4987'
+source-wordcount: '4986'
 ht-degree: 99%
 
 ---
@@ -44,7 +44,7 @@ Experience Cloud 應用程式和服務每月都會更新。 此頁面是尋找 [
 * [Document Cloud](#doc-cloud)
 * [適用於企業的 Creative Cloud](#creative-cloud)
 
-需要協助嗎？請造訪 [Adobe Experience League](https://experienceleague.adobe.com/#home)，尋找產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
+需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，尋找產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
 
 ## ![圖示](/assets/ec_appicon_24.png) Experience Cloud 中央 UI 元件 {#ecloud}
 
@@ -283,7 +283,7 @@ Adobe 建議您經常造訪 [Experience Manager 版本更新與藍圖](https://e
 
       您可以寫信寄到 [formscsbeta@adobe.com](mailto:formscsbeta@adobe.com) 來註冊 beta 版計劃。
 
-   * **Experience Manager Screens as a Cloud Service**
+   * **Experience Manager Screensas a Cloud Service**
 
       * 大量裝置註冊管理意味著佈建大量播放器裝置變得更快且更有效率。
       * 改良每個裝置、顯示和通路庫存檢視的搜尋和篩選選項。
