--- a/c-legacy-releases/2022/01192022.md
+++ b/c-legacy-releases/2022/01192022.md
@@ -6,9 +6,9 @@ last-update: January 2022
 author: mfrei
 mini-toc-levels: 1
 exl-id: bc7cb73d-39e9-48a0-bcf5-9adb6b87a6da
-source-git-commit: 0550d7a4ccf69654f6f205752a109fbb9a83e172
+source-git-commit: d397fe8a435cf411147e773ee11c34c29ecf7f5b
 workflow-type: tm+mt
-source-wordcount: '6519'
+source-wordcount: '6518'
 ht-degree: 99%
 
 ---
@@ -47,7 +47,7 @@ ht-degree: 99%
 * [[!DNL Adobe Document Cloud]](#doc-cloud)
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 
-需要協助嗎？請造訪 [Adobe Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
+需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
 
 ## ![圖示](/assets/experience-league.png) [!DNL Experience League]活動 {#events}
 
@@ -372,7 +372,7 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 
 ## Experience Manager指南 {#xml-doc}
 
-Experience Manager指南是部署到的應AEM用程式。 這是一個功能強大、企業級元件內容管理解決方案 (CCMS)；此方案可支援 Adobe Experience Manager 的本機 DITA 支援、使 AEM 能夠處理以 DITA 為主的內容建立和傳遞。了解更多關於 [AEM 的 XML 文件](https://www.adobe.com/tw/products/xml-documentation-for-experience-manager/features.html)。
+Experience Manager Guides 是部署至 AEM 的應用程式。這是一個功能強大、企業級元件內容管理解決方案 (CCMS)；此方案可支援 Adobe Experience Manager 的本機 DITA 支援、使 AEM 能夠處理以 DITA 為主的內容建立和傳遞。了解更多關於 [AEM 的 XML 文件](https://www.adobe.com/tw/products/xml-documentation-for-experience-manager/features.html)。
 
 ### Experience Manager指南的新教程 {#tutorials-xml-doc}
 
